# upb_nxp

./: README.md
Step 1 - Keras2Onnx/: README.md  main.py
Step 2 - Onnx2Bundle/: CMakeLists.txt  Loader.cpp  Loader.h  OnnxBundleGenerator.cpp  README.md
Step 3 - RunBundle/: CMakeLists.txt  README.md  gesture.cpp  network.weights
Step 4 - RunBundle on Embedded/: README.md  gesture.h  gesture.inc  gesture.onnx  glow_bundle_utils.cpp  glow_bundle_utils.h  main.cpp  timer.c  timer.h
